--- a/systems_spectral_domain/bode_plot.ipynb
+++ b/systems_spectral_domain/bode_plot.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Characterization of Systems in the Spectral Domain\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## Bode Plots\n",
     "\n",
-    "The Fourier domain transfer function $H(j \\omega)$ characterizes the transmission properties of an linear time-incariant (LTI) system with respect to the [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{j \\omega}$ for the angular frequency $\\omega = 2 \\pi f$. In order to illustrate the characteristics of an LTI system, often the magnitude $| H(j \\omega) |$ and phase $\\varphi_H(j \\omega)$ of the transfer function is regarded separately. Decomposing the output signal $Y(j \\omega) = X(j \\omega) \\cdot H(j \\omega)$ into its magnitude $| Y(j \\omega) |$ and phase $\\varphi_Y(j \\omega)$ yields\n",
+    "The Fourier domain transfer function $H(j \\omega)$ characterizes the transmission properties of a linear time-incariant (LTI) system with respect to the [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{j \\omega t}$ for the angular frequency $\\omega = 2 \\pi f$. In order to illustrate the characteristics of an LTI system, often the magnitude $| H(j \\omega) |$ and phase $\\varphi_H(j \\omega)$ of the transfer function is regarded separately. Decomposing the output signal $Y(j \\omega) = X(j \\omega) \\cdot H(j \\omega)$ into its magnitude $| Y(j \\omega) |$ and phase $\\varphi_Y(j \\omega)$ yields\n",
     "\n",
     "\\begin{align}\n",
     "| Y(j \\omega) | &= | X(j \\omega) | \\cdot | H(j \\omega) | \\\\\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bode plot is generated for the normalized values for $R = 1$, $L = 0.5$ and $C = 0.4$"
+    "The bode plot is generated for the normalized values $R = 1$, $L = 0.5$ and $C = 0.4$"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "    * What is the slope of these regions per octave/decade? \n",
     "    * At which frequency is the transition between the regions of linear behavior? How is the frequency related to the imaginary part of the zero/pole?\n",
     "\n",
-    "* Examine the bode plot of the system. How is it related to the bode plots for its zero/pole?\n",
+    "* Examine the bode plot of the system. How is it related to the bode plots of the individual zero/pole?\n",
     "\n",
     "* Move the pole and/or zero closer to the imaginary axis by changing the values $\\sigma_\\infty$ and/or $\\sigma_0$. What changes?"
    ]
@@ -221,9 +221,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
