--- a/systems_spectral_domain/transfer_function.ipynb
+++ b/systems_spectral_domain/transfer_function.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Characterization of Systems in the Spectral Domain\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -26,11 +26,7 @@
    "source": [
     "### Relation to Impulse Response and In-/Output Signal\n",
     "\n",
-    "It was already outlined in the context of the [convolution theorem of the Fourier](../fourier_transform/theorems.ipynb#Convolution-Theorem) and [Laplace transform](../laplace_transform/theorems.ipynb#Convolution-Theorem), that an LTI system can be represented equivalently in the temporal and spectral domain\n",
-    "\n",
-    "![LTI system in the temporal and spectral domain](LTI_system_time_spectral_domain.png)\n",
-    "\n",
-    "In the temporal domain the output of an LTI system is given by the convolution of the input signal $x(t)$ with the [impulse response](../systems_time_domain/impulse_response.ipynb) $h(t)$\n",
+    "It was already outlined in the context of the [convolution theorem of the Fourier](../fourier_transform/theorems.ipynb#Convolution-Theorem) and [Laplace transform](../laplace_transform/theorems.ipynb#Convolution-Theorem), that an LTI system can be represented equivalently in the temporal and spectral domain. In the temporal domain the output of an LTI system is given by convolving the input signal $x(t)$ with the [impulse response](../systems_time_domain/impulse_response.ipynb) $h(t)$ of the system\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = x(t) * h(t)\n",
@@ -48,15 +44,17 @@
     "H(s) = \\mathcal{L} \\{ h(t) \\}\n",
     "\\end{equation}\n",
     "\n",
-    "This can be concluded from the [previously derived link between the impulse response and the transfer function](../systems_time_domain/eigenfunctions.ipynb#Link-between-Transfer-Function-and-Impulse-Response). It can furthermore be concluded that the transfer function is given as the quotient between output $Y(s)$ and input signal $X(s)$ in the Laplace domain\n",
+    "This may also be concluded from the [previously derived link between the impulse response and the transfer function](../systems_time_domain/eigenfunctions.ipynb#Link-between-Transfer-Function-and-Impulse-Response). The derived results show that an LTI system can be fully characterized either in the temporal or spectral domain by its impulse response $h(t)$ or transfer function $H(s)$ or $H(j \\omega)$, respectively.\n",
+    "\n",
+    "![LTI system in the temporal and spectral domain](LTI_system_time_spectral_domain.png)\n",
+    "\n",
+    "It can furthermore be concluded that the transfer function is given as the quotient between output $Y(s)$ and input signal $X(s)$ in the Laplace domain\n",
     "\n",
     "\\begin{equation}\n",
     "H(s) = \\frac{Y(s)}{X(s)}\n",
     "\\end{equation}\n",
     "\n",
-    "for $X(s) \\neq 0$. The same relations hold in the Fourier domain if the region of convergence (ROC) of the impulse response includes the imaginary axis $\\Re \\{ s \\} = 0$. \n",
-    "\n",
-    "The derived results show that an LTI system can be fully characterized either in the temporal or spectral domain by its impulse response $h(t)$ or transfer function $H(s)$ or $H(j \\omega)$, respectively. The transfer function can be derived by divison of the spectra of the output and input signal. This can be used to measure the transfer function of a system by specific input signals that fulfill $X(s) \\neq 0$ with $X(s) \\approx$ constant."
+    "for $X(s) \\neq 0$. The same relations hold in the Fourier domain if the region of convergence (ROC) of the impulse response includes the imaginary axis $\\Re \\{ s \\} = 0$. In general, the transfer function can be derived by divison of the spectra of the output and input signal. This can be used to measure the transfer function of a system by specific input signals that fulfill $X(s) \\neq 0$ with $X(s) \\approx$ constant."
    ]
   },
   {
@@ -131,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result is equal to the [impulse response derived by explicit solution of the underlying ODE](../systems_time_domain/network_analysis.ipynb#Impulse-Response)."
+    "Note, the result is equal to the [impulse response derived by explicit solution of the underlying ODE](../systems_time_domain/network_analysis.ipynb#Impulse-Response)."
    ]
   },
   {
@@ -196,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many software packages for signal processing feature functionality for the computation of the transfer function from the coefficients $\\beta_m$ and $\\alpha_n$ of the system. The Python Signal Processing Toolbox [`scipy.signal`](http://docs.scipy.org/doc/scipy/reference/signal.html) provides a function to numerically evaluate the transfer function $H(j \\omega)$ for a given set of coefficients. This is illustrated in the following for the normalized values $R$, $L$ and $C$ given above."
+    "Many software packages for signal processing feature functionality for the computation of the transfer function from the coefficients $\\beta_m$ and $\\alpha_n$ of a system. The Python Signal Processing Toolbox [`scipy.signal`](http://docs.scipy.org/doc/scipy/reference/signal.html) for instance provides a function to numerically evaluate the transfer function $H(j \\omega)$ for a given set of coefficients. This is illustrated in the following for the normalized values $R$, $L$ and $C$ used above."
    ]
   },
   {
@@ -232,7 +230,6 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.plot(w, abs(H))\n",
-    "plt.title('Magnitude of the transfer function $H(j \\omega)$')\n",
     "plt.xlabel('$\\omega$ in $s^{-1}$')\n",
     "plt.ylabel('$|H(j \\omega)|$')\n",
     "plt.grid();"
@@ -244,9 +241,9 @@
    "source": [
     "### Determination from Internal Structure\n",
     "\n",
-    "The transfer function $H(s)$ can be determined from the internal structure of an LTI system, if known. Either by derivation of the ODE characterizing the system, as shown above, or by direct anlysis of the system in the Laplace/Fourier domain. For passive electrical networks this can be conducted by representing the signals and elements of the network by their complex impedances $Z(s)$ and applying Kirchhoff's circuit laws. This was illustrated for instance by the previous [Laplace domain analysis of a 2nd order low-pass filter](../laplace_transform/network_analysis.ipynb#Example:-Second-Order-Low-Pass-Filter). Similar procedures can be applied to other types of LTI systems, e.g. mechanical systems.\n",
+    "The transfer function $H(s)$ can be determined from the internal structure of an LTI system, if known. Either by derivation of the ODE characterizing the system, as shown above, or by direct analysis of the system in the Laplace/Fourier domain. For passive electrical networks this can be conducted by representing the signals and elements of the network by their complex impedances $Z(s)$ and applying Kirchhoff's circuit laws. This was illustrated for instance by the previous [Laplace domain analysis of a 2nd order low-pass filter](../laplace_transform/network_analysis.ipynb#Example:-Second-Order-Low-Pass-Filter). Similar procedures can be applied to other types of LTI systems, e.g. mechanical systems.\n",
     "\n",
-    "The transfer function is then given as the quotient bewtween the output signal $Y(s)$ and the input signal $X(s)$ in the transformed domain."
+    "The transfer function is then given as the quotient between the output signal $Y(s)$ and the input signal $X(s)$ in the Laplace/Fourier domain."
    ]
   },
   {
