--- a/systems_spectral_domain/combination.ipynb
+++ b/systems_spectral_domain/combination.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Characterization of Systems in the Spectral Domain\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "y(t) =  x(t) * h_1(t) * h_2(t)\n",
     "\\end{equation}\n",
     "\n",
-    "where $x(t)$ denotes the input signal of the first system. Laplace transformation of the respective signals and impulse responses, and application of the convolution theorem yields\n",
+    "where $x(t)$ denotes the input signal of the first system. Laplace transformation of the respective signals and impulse responses, and repeated application of the convolution theorem yields\n",
     "\n",
     "\\begin{equation}\n",
     "Y(s) = \\underbrace{H_1(s) \\cdot H_2(s)}_{H(s)} \\cdot X(s)\n",
@@ -42,13 +42,13 @@
     "\n",
     "![Concatenation of two systems](concatenation.png)\n",
     "\n",
-    "The extension to a concatenation of $N$ systems is straightforward by multiplication of all the individual transfer functions $H_n(s)$\n",
+    "The extension to a concatenation of $N$ systems is straightforward. The overall transfer function is given by multiplication of all the individual transfer functions $H_n(s)$\n",
     "\n",
     "\\begin{equation}\n",
     "H(s) = \\prod_{n=1}^{N} H_n(s)\n",
     "\\end{equation}\n",
     "\n",
-    "Applications of concatenated systems include for instance the modeling of wirless transmission systems and cascaded filters."
+    "Applications of concatenated systems include for instance the modeling of wireless transmission systems and cascaded filters."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bode plot for the transfer function $H(j \\omega)$ is shown for $N = \\{1, 2, 3\\}$ (red, green, blue line)"
+    "The bode plot for the transfer function $H_N(j \\omega)$ is shown for $N = \\{1, 2, 3\\}$ (red, green, blue line)"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "\n",
     "![Parallel connection of two systems](parallel.png)\n",
     "\n",
-    "The extension to a parallel connection of $N$ systems is straightforward by superposition of all individual transfer functions $H_n(s)$\n",
+    "The extension to a parallel connection of $N$ systems is straightforward. The overall transfer function is given by superposition of all individual transfer functions $H_n(s)$\n",
     "\n",
     "\\begin{equation}\n",
     "H(s) = \\sum_{n=1}^{N} H_n(s)\n",
@@ -221,9 +221,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
