--- a/systems_time_domain/network_analysis.ipynb
+++ b/systems_time_domain/network_analysis.ipynb
@@ -160,7 +160,7 @@
    "source": [
     "tau = sym.symbols('tau')\n",
     "\n",
-    "he = sym.integrate(h.subs(RLC).subs(t,tau).subs(sym.Heaviside(tau),1), (tau,0,t))\n",
+    "he = sym.integrate(h.subs(RLC).subs(t,tau), (tau,0,t))\n",
     "he"
    ]
   },
@@ -294,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
