--- a/laplace_transform/definition.ipynb
+++ b/laplace_transform/definition.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Definition\n",
     "\n",
-    "The [Laplace transform](https://en.wikipedia.org/wiki/Laplace_transform) is an integral transform which represents a signal $x(t)$ in the spectral domain. It features the complex exponential function $e^{s t}$ with $s \\in \\mathbb{C}$ as kernel. Note, the same functions constitute eigenfunctions of linear time-invariant (LTI) systems. The Laplace transform is named after its discoverer [Pierre-Simon Laplace](https://en.wikipedia.org/wiki/Pierre-Simon_Laplace)."
+    "The [Laplace transform](https://en.wikipedia.org/wiki/Laplace_transform) constitutes an integral transform with the complex exponential function $e^{s t}$ with $s \\in \\mathbb{C}$ as kernel. Note, complex exponential functions constitute eigenfunctions of linear time-invariant (LTI) systems. The Laplace transform is named after its discoverer [Pierre-Simon Laplace](https://en.wikipedia.org/wiki/Pierre-Simon_Laplace). It is introduced in the following."
    ]
   },
   {
@@ -43,19 +43,19 @@
    "source": [
     "### One-Sided Laplace Transform\n",
     "\n",
-    "Causal signals play an important role in the theory of signals and system. For a causal signal $x(t) = 0$ for $t <0$, the relation $x(t) = x(t) \\cdot \\epsilon(t)$ holds. Introducing this into the definition of the two-sided Laplace transformation results in\n",
+    "Causal signals play an important role in the theory of signals and system. For a causal signal $x(t) = 0$ for $t <0$, the relation $x(t) = x(t) \\cdot \\epsilon(t)$ holds. Introducing this into the definition of the two-sided Laplace transformation yields\n",
     "\n",
     "\\begin{equation}\n",
     "X(s) = \\int_{-\\infty}^{\\infty} x(t) \\cdot \\epsilon(t) \\, e^{- s t} \\; dt = \\int_{0}^{\\infty} x(t) \\, e^{- s t} \\; dt\n",
     "\\end{equation}\n",
     "\n",
-    "This motivates the definition of the one-sided Laplace transform\n",
+    "This motivates the definition of a one-sided Laplace transform\n",
     "\n",
     "\\begin{equation}\n",
     "X(s) = \\int_{0}^{\\infty} x(t) \\, e^{- s t} \\; dt\n",
     "\\end{equation}\n",
     "\n",
-    "In the literature both the one- and two-sided Laplace transform are termed as Laplace transform. For causal signals both give the same result."
+    "In the literature both the one- and two-sided Laplace transform are termed as Laplace transform. Both give the same result for causal signals."
    ]
   },
   {
@@ -67,7 +67,7 @@
     "The transform $\\mathcal{L} \\{ \\delta(t) \\}$ of the [Dirac impulse](../continuous_signals/standard_signals.ipynb#Dirac-Impulse) is derived by introducing $\\delta(t)$ into the definition of the two-sided Laplace transform and exploiting the sifting property of the Dirac delta function\n",
     "\n",
     "\\begin{equation}\n",
-    "\\mathcal{L} \\{ \\delta(t) \\} = \\int_{-\\infty}^{\\infty} \\delta(t) \\, e^{- s t} dt = 1\n",
+    "\\mathcal{L} \\{ \\delta(t) \\} = \\int_{-\\infty}^{\\infty} \\delta(t) \\, e^{- s t} dt = e^{- s t} \\Big\\vert_{t=0}  =  1\n",
     "\\end{equation}\n",
     "for $s \\in \\mathbb{C}$. The ROC covers the entire complex plane.\n",
     "\n",
@@ -125,10 +125,12 @@
     "\n",
     "with complex frequency $s_0 \\in \\mathbb{C}$ is derived by evaluation of the definition of the one-sided Laplace transform\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
     "X(s) &= \\int_{0}^{\\infty} e^{-s_0 t} \\cdot e^{-s t} \\; dt = \\frac{-e^{-(s+s_0)t}}{s+s_0} \\, \\bigg\\vert_{0}^{\\infty} = \\frac{-1}{s+s_0} \\left[ \\lim_{t \\to \\infty} \\left( e^{- (s+s_0) t} \\right) -1 \\right] \\\\\n",
     "&= \\frac{1}{s + s_0}\n",
-    "\\end{align}\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
     "\n",
     "As can be concluded from the limit case above, the Laplace transform converges only for $\\Re \\{ s + s_0 \\} > 0$. Hence, the ROC is given as\n",
     "\n",
@@ -136,7 +138,7 @@
     "\\Re \\{ s \\} > \\Re \\{ - s_0 \\} \n",
     "\\end{equation}\n",
     "\n",
-    "Combining above results, the transformation of the causal complex exponential signal reads\n",
+    "Combining above findings, the transformation of the causal complex exponential signal reads\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{L} \\{ \\epsilon(t) \\cdot e^{-s_0 t} \\} = \\frac{1}{s + s_0} \\qquad \\text{for } \\Re \\{ s \\} > \\Re \\{ - s_0 \\}\n",
@@ -149,7 +151,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "In `SymPy` the [Laplace transform](http://docs.sympy.org/latest/modules/integrals/integrals.html?highlight=laplace#sympy.integrals.transforms.laplace_transform) is defined as one-sided transformation. The function is utilized in the following to calculate the transform of the causal complex exponential signal."
+    "In `SymPy` the [Laplace transform](http://docs.sympy.org/latest/modules/integrals/integrals.html?highlight=laplace#sympy.integrals.transforms.laplace_transform) is defined as one-sided transformation. The respective function of `SymPy` is utilized in the following to calculate the transform of the causal complex exponential signal."
    ]
   },
   {
@@ -168,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function returns three results. Its first element is the Laplace transform $X(s)$, the second element $a$ is the half-plane of convergence with $\\Re \\{ s \\} > a$ the third element is an auxiliary convergence condition."
+    "The function returns three results. The first result is the Laplace transform $X(s)$, the second result $a$ is the half-plane of convergence with $\\Re \\{ s \\} > a$ and the third result represents an auxiliary convergence condition."
    ]
   },
   {
@@ -204,7 +206,7 @@
     "\n",
     "![Region of convergence for left-/two-/right-sided signal](ROC.png)\n",
     "\n",
-    "The gray areas denote the values $s$ for which the Laplace transformation converges. The borders $a$ of these areas (dashed lines) depend on the signal $s(t)$. A more detailed discussion of the ROCs for the Laplace transform can be found in the literature, e.g. [[Girod et al.](index.ipynb#Literature)]"
+    "The gray areas denote the values $s$ for which the Laplace transformation converges. The borders $a$ of these areas (dashed lines) depend on the signal $x(t)$. A more detailed discussion of the ROCs for the Laplace transform can be found in the literature, e.g. [[Girod et al.](index.ipynb#Literature)]"
    ]
   },
   {
@@ -215,7 +217,7 @@
     "\n",
     "The Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ depends on the complex frequency $s \\in \\mathbb{C}$ and is in general complex valued $X(s) \\in \\mathbb{C}$. It can be illustrated by plotting its magnitude $|X(s)|$ and phase $\\varphi (s)$ or real $\\Re \\{ X(s) \\}$ and imaginary $\\Im \\{ X(s) \\}$ part in the complex $s$-plane. The resulting three-dimensional plots are often not very illustrative. \n",
     "\n",
-    "However, many Laplace transforms of interest in the theory of signals and systems are [rational functions](https://en.wikipedia.org/wiki/Rational_function) in $s$. The polynomials of the numerator and denominator can be represented by their complex [roots](https://en.wikipedia.org/wiki/Zero_of_a_function#Polynomial_roots) and a constant factor. The roots of the numerator are termed as *zeros* while the roots of the denominator a termed as *poles* of $X(s)$. The polynomial and the zero/pole representation of a rational Laplace transform are equivalent\n",
+    "However, many Laplace transforms of interest in the theory of signals and systems are [rational functions](https://en.wikipedia.org/wiki/Rational_function) in $s$. The polynomials of the numerator and denominator can be represented by their complex [roots](https://en.wikipedia.org/wiki/Zero_of_a_function#Polynomial_roots) and a constant factor. The roots of the numerator are termed as *zeros* while the roots of the denominator are termed as *poles* of $X(s)$. The polynomial and the zero/pole representation of a rational Laplace transform are equivalent\n",
     "\n",
     "\\begin{equation}\n",
     "X(s) = \\frac{\\sum_{m=0}^{M} \\beta_m s^m}{\\sum_{n=0}^{N} \\alpha_n s^n} = K \\cdot \\frac{\\prod_{\\mu=0}^{Q} (s - s_{0 \\mu})}{\\prod_{\\nu=0}^{P} (s - s_{\\infty \\nu})}\n",
@@ -227,7 +229,7 @@
     "\n",
     "![](pz_plot.png)\n",
     "\n",
-    "The locations of the poles and zeros provide insights into the composition of a signal. For instance, the Laplace transform of the [complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal) has a pole at $s = - s_0$. A signal which is composed from a superposition of complex exponential signals will have multiple poles whose positions are related to the complex frequencies of the signals it is composed of."
+    "The locations of the poles and zeros provide insights into the composition of a signal. For instance, the Laplace transform of the [complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal) has a pole at $s = - s_0$. A signal which is composed from a superposition of complex exponential signals will have multiple poles whose positions are related to the complex frequencies it is composed of."
    ]
   },
   {
