--- a/laplace_transform/theorems.ipynb
+++ b/laplace_transform/theorems.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Transformation of two convolved signals**\n",
     "\n",
     "The Laplace transform of the convolution of a causal cosine signal $\\epsilon(t) \\cdot \\cos(\\omega_0 t)$ with a causal sine signal $\\epsilon(t) \\cdot \\sin(\\omega_0 t)$ is derived by the convolution theorem\n",
     "\n",
@@ -226,13 +226,13 @@
     "\\text{rect}(t) = \\epsilon \\left(t + \\frac{1}{2} \\right) - \\epsilon \\left(t - \\frac{1}{2} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "Applying the shift theorem to the [transform of the Heaviside signal](definition.ipynb#Transformation-of-the-Heaviside-Signal) and the linearity of the Laplace transform yields\n",
+    "Applying the shift theorem to the [transform of the Heaviside signal](definition.ipynb#Transformation-of-the-Heaviside-Signal) and exploiting the linearity of the Laplace transform yields\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{L} \\{ \\text{rect}(t) \\} = \\frac{1}{s} e^{s \\frac{1}{2}} - \\frac{1}{s} e^{- s \\frac{1}{2}} = \\frac{\\sinh \\left( \\frac{s}{2} \\right) }{\\frac{s}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\sinh(\\cdot)$ denotes the [hyperbolic sine function](https://en.wikipedia.org/wiki/Hyperbolic_function#Sinh). The ROC of the Heaviside signal is given as $\\Re \\{ s \\} > 0$. Applying [l'Hopitals rule](https://en.wikipedia.org/wiki/L'H%C3%B4pital's_rule) the pole at $s=0$ can be disregarded leading to\n",
+    "where $\\sinh(\\cdot)$ denotes the [hyperbolic sine function](https://en.wikipedia.org/wiki/Hyperbolic_function#Sinh). The ROC of the Heaviside signal is given as $\\Re \\{ s \\} > 0$. Applying [l'Hopitals rule](https://en.wikipedia.org/wiki/L'H%C3%B4pital's_rule), the pole at $s=0$ can be disregarded leading to\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{ROC} \\{ \\text{rect}(t) \\} = \\mathbb{C}\n",
@@ -274,7 +274,7 @@
    "source": [
     "### Differentiation Theorem\n",
     "\n",
-    "Derivatives of signals are the fundamental operations of differential equations. Ordinary differential equations (ODEs) with constant coefficients play an important role in the theory of time-invariant (LTI) systems. Consequently, the representation of the derivative of a signal in the Laplace domain is of special interest."
+    "Derivatives of signals are the fundamental operations of differential equations. Ordinary differential equations (ODEs) with constant coefficients play an important role in the theory of linear time-invariant (LTI) systems. Consequently, the representation of the derivative of a signal in the Laplace domain is of special interest."
    ]
   },
   {
@@ -312,7 +312,7 @@
    "source": [
     "#### One-sided transform\n",
     "\n",
-    "Many practical signals and systems are causal, hence $x(t) = 0$ for $t < 0$. A causal signal is potentially discontinuous for $t=0$. The direct application of above result for the two-sided Laplace transform is not possible since it assumes that the signal is differentiable for every time $t$. The potential discontinuity at $t=0$ has to be considered explicitly for the derivation of the differentiation theorem for the one-sided Laplace transform [[Girod et al.](index.ipynb#Literature)]\n",
+    "Many practical signals and systems are causal, hence $x(t) = 0$ for $t < 0$. A causal signal is potentially discontinuous for $t=0$. The direct application of above result for the two-sided Laplace transform is not possible since it assumes that the signal is differentiable for every time instant $t$. The potential discontinuity at $t=0$ has to be considered explicitly for the derivation of the differentiation theorem for the one-sided Laplace transform [[Girod et al.](index.ipynb#Literature)]\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{L} \\left\\{ \\frac{d x(t)}{dt} \\right\\} = s \\cdot X(s) - x(0+)\n",
@@ -367,7 +367,7 @@
    "source": [
     "#### Transformation of the ramp signal\n",
     "\n",
-    "The Laplace transform of the causal [ramp signal](https://en.wikipedia.org/wiki/Ramp_function) $t \\cdot \\epsilon(t)$ is derived by the integration theorem. The ramp signal can be expressed as integration over the Heaviside signal\n",
+    "The Laplace transform of the causal [ramp signal](https://en.wikipedia.org/wiki/Ramp_function) $t \\cdot \\epsilon(t)$ is derived by applying the integration theorem. The ramp signal can be expressed as integration over the Heaviside signal\n",
     "\n",
     "\\begin{equation}\n",
     "t \\cdot \\epsilon(t) = \\int_{-\\infty}^{t} \\tau \\cdot \\epsilon(\\tau) \\; d \\tau\n",
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Transformation of $t^n e^{-s_0 t} \\epsilon(t)$**\n",
     "\n",
     "The Laplace transform of the signal $t^n \\cdot \\epsilon(t)$ \n",
     "\n",
