Minor revision of text and examples

--- a/continuous_signals/operations.ipynb
+++ b/continuous_signals/operations.ipynb
@@ -137,7 +137,7 @@
     "* compressed for $a > 1$\n",
     "* time-reversed and scaled for $a < 0$\n",
     "\n",
-    "An application of temporal scaling in signal processing is the modeling of the [Doppler effect](https://en.wikipedia.org/wiki/Doppler_effect)."
+    "An application of temporal scaling in signal processing is the scaling of standard signals and the modeling of the [Doppler effect](https://en.wikipedia.org/wiki/Doppler_effect)."
    ]
   },
   {
@@ -158,7 +158,10 @@
     "a = .5\n",
     "y = x.subs(t, a*t)\n",
     "\n",
-    "sym.plot(y.subs(a, 1/2), (t, -3, 7), ylim=[-0.2, 1.2], ylabel=r'$y(t)$');"
+    "px = sym.plot(x, (t, -3, 7), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False, line_color='gray')\n",
+    "py = sym.plot(y.subs(a, 1/2), (t, -3, 7), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False)\n",
+    "px.extend(py)\n",
+    "px.show()"
    ]
   },
   {
@@ -199,7 +202,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The following example illustrates the temporal flipping of the staircase signal $x(t)$ introduced before."
+    "The following example illustrates the temporal flipping $y(t) = x(\\tau - t)$ of the staircase signal $x(t)$ introduced before."
    ]
   },
   {
@@ -208,10 +211,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tau = 2\n",
+    "tau = -1\n",
     "y = x.subs(t, tau - t)\n",
     "\n",
-    "sym.plot(y,(t, -5, 5), ylim=[-0.2, 1.2], ylabel=r'$s(\\tau-t)$');"
+    "px = sym.plot(x, (t, -5, 5), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False, line_color='gray')\n",
+    "py = sym.plot(y, (t, -5, 5), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False)\n",
+    "px.extend(py)\n",
+    "px.show()"
    ]
   },
   {
@@ -221,7 +227,7 @@
     "**Excercise**\n",
     "\n",
     "* For what value $\\tau$ does the signal start at $t=0$?\n",
-    "* Realize the temporal flipping by splitting it into two operations: (i) time-reversal and (ii) temporal shift."
+    "* Realize the temporal flipping by splitting it into two consecutive operations: (i) time-reversal and (ii) temporal shift."
    ]
   },
   {
