Minor edits, explicit computation of integration constants in example

--- a/systems_time_domain/impulse_response.ipynb
+++ b/systems_time_domain/impulse_response.ipynb
@@ -23,19 +23,19 @@
     "x(t) = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot \\delta(t-\\tau) \\; d \\tau\n",
     "\\end{equation}\n",
     "\n",
-    "The output signal of the system is then given as\n",
+    "Introducing above relation for the the input signal $x(t)$ into the output signal $y(t) = \\mathcal{H} \\{ x(t) \\}$ of the system yields\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\mathcal{H} \\left\\{ \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot \\delta(t-\\tau) \\; d \\tau \\right\\}\n",
     "\\end{equation}\n",
     "\n",
-    "The integration and system response operator can be exchanged under the assumption that the system is linear\n",
+    "where $\\mathcal{H} \\{ \\cdot \\}$ denotes the system response operator. The integration and system response operator can be exchanged under the assumption that the system is linear\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\int_{-\\infty}^{\\infty}  x(\\tau) \\cdot \\mathcal{H} \\left\\{ \\delta(t-\\tau) \\right\\} \\; d \\tau \n",
     "\\end{equation}\n",
     "\n",
-    "where $\\mathcal{H} \\{\\cdot\\}$ was only applied to the Dirac impulse, since $x(\\tau)$ can be regarded as constant factor with respect to the time $t$. It is obvious that the response of a system to a Dirac impulse plays an important role in the calculation of the output signal for arbitrary input signals. \n",
+    "where $\\mathcal{H} \\{\\cdot\\}$ was only applied to the Dirac impulse, since $x(\\tau)$ can be regarded as constant factor with respect to the time $t$. It becomes evident that the response of a system to a Dirac impulse plays an important role in the calculation of the output signal for arbitrary input signals. \n",
     "\n",
     "The response of a system to a Dirac impulse as input signal is denoted as [*impulse response*](https://en.wikipedia.org/wiki/Impulse_response). It is defined as\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "Due to its relevance in the theory of LTI systems, this operation is explicitly termed as [*convolution*](https://en.wikipedia.org/wiki/Convolution). It is commonly abbreviated by $*$, hence for above integral we get $y(t) = x(t) * h(t)$.\n",
     "\n",
-    "The properties of an LTI system are entirely characterized by its impulse response. The response $y(t)$ of a system to an arbitrary input signal $x(t)$ is given by the convolution of the input signal $x(t)$ with its impulse response $h(t)$."
+    "In can be concluded that the properties of an LTI system are entirely characterized by its impulse response. The response $y(t)$ of a system to an arbitrary input signal $x(t)$ is given by the convolution of the input signal $x(t)$ with its impulse response $h(t)$."
    ]
   },
   {
@@ -66,7 +66,7 @@
     "y(t) + \\frac{d}{dt} y(t) = x(t)\n",
     "\\end{equation}\n",
     "\n",
-    "The system response is computed for $x(t) = e^{- 2 t} \\cdot \\epsilon(t)$ by \n",
+    "The system response is computed for the input signal $x(t) = e^{- 2 t} \\cdot \\epsilon(t)$ by \n",
     "\n",
     "1. explicitly solving the ODE and by \n",
     "2. computing the impulse response $h(t)$ and convolution with the input signal.\n",
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ODE is solved for the given input signal in order to calculate the output signal. Note that the integration constant is set to zero to fulfill the initial conditions"
+    "The ODE is solved for the given input signal in order to calculate the output signal. The integration constant is calculated such that the solution fulfills the initial conditions"
    ]
   },
   {
@@ -108,7 +108,8 @@
    "outputs": [],
    "source": [
     "solution = sym.dsolve(ode.subs(x, sym.exp(-2*t)*sym.Heaviside(t)))\n",
-    "y1 = solution.rhs.subs('C1', 0)\n",
+    "integration_constants = sym.solve( (solution.rhs.limit(t, 0, '-'), solution.rhs.diff(t).limit(t, 0, '-')), 'C1' )\n",
+    "y1 = solution.subs(integration_constants)\n",
     "y1"
    ]
   },
@@ -125,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(y1, (t,-1,10), ylabel=r'$y(t)$');"
+    "sym.plot(y1.rhs, (t,-1,10), ylabel=r'$y(t)$');"
    ]
   },
   {
@@ -141,8 +142,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution2 = sym.dsolve(ode.subs(x, sym.DiracDelta(t)))\n",
-    "h = solution2.rhs.subs('C1', 0)\n",
+    "h = sym.Function('h')(t)\n",
+    "solution2 = sym.dsolve(ode.subs(x, sym.DiracDelta(t)).subs(y, h))\n",
+    "integration_constants = sym.solve( (solution2.rhs.limit(t, 0, '-'), solution2.rhs.diff(t).limit(t, 0, '-')), 'C1' )\n",
+    "h = solution2.subs(integration_constants)\n",
     "h"
    ]
   },
@@ -159,14 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(h, (t,-1,10), ylabel=r'$h(t)$');"
+    "sym.plot(h.rhs, (t,-1,10), ylabel=r'$h(t)$');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As alternative to the explicit solution of the ODE, the system response is computed by evaluating the convolution integral. Since `SymPy` cannot handle the Heaviside function properly in integrands, the convolution integral is first simplified. Both the input signal $x(t)$ and the impulse response $h(t)$ are causal signals. Hence, the convolution integral degenerates to\n",
+    "As alternative to the explicit solution of the ODE, the system response is computed by evaluating the convolution $y(t) = x(t) * h(t)$. Since `SymPy` cannot handle the Heaviside function properly in integrands, the convolution integral is first simplified. Both the input signal $x(t)$ and the impulse response $h(t)$ are causal signals. Hence, the convolution integral degenerates to\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\int_{0}^{t} x(\\tau) \\cdot h(t - \\tau) \\; d\\tau\n",
@@ -183,7 +186,7 @@
    "source": [
     "tau = sym.symbols('tau', real=True)\n",
     "\n",
-    "y2 = sym.integrate(sym.exp(-2*tau) * h.subs(sym.Heaviside(t), 1).subs(t, t-tau), (tau, 0, t))\n",
+    "y2 = sym.integrate(sym.exp(-2*tau) * h.rhs.subs(sym.Heaviside(t), 1).subs(t, t-tau), (tau, 0, t))\n",
     "y2"
    ]
   },
