--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -17,13 +17,16 @@
    "source": [
     "## Convolution\n",
     "\n",
+    "The convolution is an important operation in the theory of signals and systems, as shown in the previous Section. It also shows up in a wide range of other physics and mathematical problems. The operation is therefore of general interest and well known in mathematics. The properties of the convolution are reviewed, followed by a widely used graphical interpretation of the operation.\n",
+    "\n",
     "The convolution of two signals $s(t)$ and $g(t)$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "\\int_{-\\infty}^{\\infty} s(\\tau) \\cdot g(t - \\tau) \\; d\\tau = s(t) * g(t)\n",
+    "s(t) * g(t) = \\int_{-\\infty}^{\\infty} s(\\tau) \\cdot g(t - \\tau) \\; d\\tau = \n",
+    "\\int_{-\\infty}^{\\infty} s(t - \\tau) \\cdot g(\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
-    "where $*$ is a common short-hand notation of the convolution integral. As shown in the previous Section, the convolution is an important operation in the theory of signals and systems. Its properties are therefore of general interest."
+    "where $*$ is a common short-hand notation of the convolution. "
    ]
   },
   {
@@ -71,16 +74,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Geometrical Interpretation\n",
+    "### Graphical Interpretation\n",
     "\n",
-    "The convolution can be [interpreted in a graphical manner](https://en.wikipedia.org/wiki/Convolution#Visual_explanation). This provides valuable insights into its calculation and allows to estimate its result. The calculation of the convolution integral \n",
+    "The convolution is commonly [interpreted in a graphical manner](https://en.wikipedia.org/wiki/Convolution#Visual_explanation). This interpretation provides valuable insights into its calculation and allows to derive a first estimate of the result. The calculation of the convolution integral\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot h(t-\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
     "\n",
-    "can be decomposed into four steps:\n",
+    "can be decomposed into four subsequent operations:\n",
     "\n",
     "1. substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$,\n",
     "\n",
@@ -88,7 +91,9 @@
     "\n",
     "3. shift $h(-\\tau)$ by $t$ to the right to yield $h(t - \\tau)$,\n",
     "\n",
-    "4. shift $h(t - \\tau)$ from $t = -\\infty$ to $t = \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections."
+    "4. shift $h(t - \\tau)$ for $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$ and calculate the convolution integral for the overlapping sections.\n",
+    "\n",
+    "The graphical interpretation of these operations is illustrated in the remainder by an example. "
    ]
   },
   {
@@ -97,7 +102,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "Above procedure is illustrated in the following example with\n",
+    "The convolution $y(t) = x(t) * h(t)$ is illustrated using the particular signals\n",
     "\n",
     "\\begin{align}\n",
     "h(t) &= e^{-t} \\\\\n",
@@ -117,7 +122,7 @@
     "import sympy as sym\n",
     "sym.init_printing()\n",
     "\n",
-    "t, tau = sym.symbols('t tau')"
+    "t, tau = sym.symbols('t tau', real=True)"
    ]
   },
   {
@@ -169,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **first step** is to substitute $t$ by $\\tau$. The horizontal axis of the plot represents $\\tau$"
+    "The **first step** is to substitute $t$ by $\\tau$ to yield $h(\\tau)$ and $x(\\tau)$. Note, the horizontal axis of the plot represents now $\\tau$"
    ]
   },
   {
@@ -188,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **second step** is to time-reverse $h(\\tau)$"
+    "The **second step** is to time-reverse $h(\\tau)$ to yield $h(-\\tau)$"
    ]
   },
   {
@@ -230,7 +235,7 @@
     "2. $0 \\leq t < 1$: partial overlap\n",
     "3. $t > 0$: full overlap\n",
     "\n",
-    "The **fourth step**, the evaluation of the convolution integral for the three cases is left open as an exercise."
+    "The **fourth step**, the evaluation of the convolution integrals for the three cases is left open as an exercise. Note, since in the first case no overlap occurs $y(t) = 0$ for $t<0$."
    ]
   },
   {
