Minor edits, added phase computation/plot in example

--- a/systems_time_domain/network_analysis.ipynb
+++ b/systems_time_domain/network_analysis.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "[Electrical networks](https://en.wikipedia.org/wiki/Electrical_network) composed of linear passive elements, like resistors, capacitors and inductors can be described by linear ordinary differential equations (ODEs) with constant coefficients. Hence, in view of the theory of signals and systems they can be interpreted as a linear time-invariant (LTI) system. The different ways to characterize the properties of an LTI system introduced before are illustrated at the example of a second-order analog [low-pass filter](https://en.wikipedia.org/wiki/Low-pass_filter).\n",
     "\n",
-    "![2nd-order analog low-pass filter](lowpass.png)\n",
+    "![Circuit of a 2nd-order analog low-pass filter](lowpass.png)\n",
     "\n",
     "It is assumed that no energy is stored in the capacitor and inductor for $t<0$. It is furthermore assumed that $x(t) = 0$ for $t<0$. Hence $y(t) = 0$ and $\\frac{d y(t)}{dt} = 0$ for $t<0$. For illustration, the normalized values $L = .5$, $R = 1$, $C = .4$ are used for the elements of the electrical network."
    ]
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The normalized values of the network elements are stored in a dictionary for substitution"
+    "The normalized values of the network elements are stored in a dictionary for later substitution"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = solution_h.subs(integration_constants).rhs\n",
+    "h = solution_h.subs(integration_constants)\n",
     "h"
    ]
   },
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(h.subs(RLC), (t,0,10), ylabel=r'h(t)');"
+    "sym.plot(h.rhs.subs(RLC), (t,0,10), ylabel=r'h(t)');"
    ]
   },
   {
@@ -158,9 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tau = sym.symbols('tau')\n",
+    "tau = sym.symbols('tau', real=True)\n",
     "\n",
-    "he = sym.integrate(h.subs(RLC).subs(t,tau), (tau,0,t))\n",
+    "he = sym.integrate(h.rhs.subs(RLC).subs(t,tau), (tau,0,t))\n",
     "he"
    ]
   },
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The transfer characteristics of an LTI system for harmonic exponential signals $e^{j \\omega} = \\cos(\\omega t) + j \\sin(\\omega t)$ are of special interest in the analysis of electrical circuits. It can be derived from $H(s)$ by substituting the complex frequency $s$ with $s = j \\omega$. The resulting transfer function $H(j \\omega)$ provides the attenuation and phase the system adds to a harmonic input signal."
+    "The transfer characteristics of an LTI system for harmonic exponential signals $e^{j \\omega} = \\cos(\\omega t) + j \\sin(\\omega t)$ are of special interest in the analysis of electrical circuits. It can be derived from $H(s)$ by substituting the complex frequency $s$ by $s = j \\omega$. The resulting transfer function $H(j \\omega)$ provides the attenuation and phase the system adds to a harmonic input signal."
    ]
   },
   {
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = sym.symbols('omega')\n",
+    "w = sym.symbols('omega', real=True)\n",
     "\n",
     "Hjw = H.subs(s, sym.I * w)\n",
     "Hjw"
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is obvious, that the low frequencies pass through the system and that high frequencies are attenuated. This motivates the term 'low-pass' for such systems.\n",
+    "It now becomes obvious, that the low frequencies pass through the system and that high frequencies are attenuated. This motivates the term 'low-pass' for such systems.\n",
     "\n",
     "As alternative to the solution of the ODE, the transfer function $H(s)$ is [computed from the impulse response](eigenfunctions.ipynb#Link-between-Transfer-Function-and-Impulse-Response) and plotted for the specific values of the elements given above"
    ]
@@ -252,9 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H2 = sym.integrate(h.subs(RLC)*sym.exp(-s*t), (t,0,sym.oo), conds='none')\n",
-    "H2 = H2.simplify()\n",
-    "H2"
+    "H2 = sym.integrate(h.rhs.subs(RLC)*sym.exp(-s*t), (t,0,sym.oo), conds='none')\n",
+    "H2.simplify()"
    ]
   },
   {
@@ -264,6 +263,23 @@
    "outputs": [],
    "source": [
     "sym.plot(abs(H2.subs(s, sym.I*w)), (w, -10, 10), ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The phase of the transfer function $\\varphi(j \\omega) = \\arg \\{ H(j \\omega) \\}$ provides insight into the phase added to a harmonic signal when passing through the system. It is computed and plotted for the specific values of the elements given above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi = sym.arg(Hjw)\n",
+    "sym.plot(phi.subs(RLC), (w, -10, 10), ylabel=r'$\\varphi(j \\omega)$', xlabel=r'$\\omega$');"
    ]
   },
   {
